[package]
name = "rslr"
version = "0.0.0"
authors = ["Matt Coster <opensource@mtcoster.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/MTCoster/rslr/"
description = "Placeholder for an upcoming tree-shaking static analyzer"

[badges]
maintenance = { status = "actively-developed" }
